# sitesurveyor

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  FEATURE_IMPLEMENTATION_SUMMARY.md  FEATURE_ROADMAP.md  LICENSE  QML_ERROR_HANDLING.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  appwrite.config.json  function() { [native code] }  run.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
resources/: qml.qrc  resources.qrc  sitesurveyor.desktop
resources/qml/: DashboardView.qml  DisciplineSelectionView.qml  Main.qml  ProjectManagementView.qml  SplashScreen.qml
resources/qml/components/: DTM3DViewer.qml  ErrorBanner.qml  IconLabel.qml  LeftPane.qml  MapPicker.qml  MiddlePane.qml  MiddlePaneWidget.qml  ProcessingOverlay.qml  RecentProjectsList.qml  RightPane.qml  RightPaneLightSwitchComponent.qml
resources/qml/dialogs/: CoordinateConverterDialog.qml
resources/qml/pages/engineering/: AddPointDialog.qml  CADOptionsDialog.qml  CADPage.qml  EngineeringDashboard.qml  InstrumentsPage.qml  LevellingPage.qml  PersonnelPage.qml  PointManagerDialog.qml  ReportPage.qml  SettingsPage.qml  TraversingPage.qml
resources/qml/pages/engineering/components/: Header.qml  MapCanvas.qml  SideBar.qml  StatTile.qml
resources/windows/: SiteSurveyor.rc
scripts/: quickstart.sh  win_build.bat
src/: main.cpp
src/analysis/: DTMGenerator.cpp  DTMGenerator.h  EarthworkEngine.cpp  EarthworkEngine.h  EarthworkEngine_masked_snippet.cpp  GDALHelpers.h  MeshExporter.cpp  MeshExporter.h  TINProcessor.cpp  TINProcessor.h  VolumeCalculator.cpp  VolumeCalculator.h
src/cloud/: CloudSyncManager.cpp  CloudSyncManager.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/utilities/: CoordinateTransformer.cpp  CoordinateTransformer.h
